force-app/main/default/objects/CF_AnonymizationErrorLog__c/CF_AnonymizationErrorLog__c.object-meta.xml
<CustomObject>
    <label>CF Anonymization Error Log</label>
    <nameField>
        <displayFormat>AEL-{0000000000}</displayFormat>
        <label>Anonymization Err Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CF Anonymization Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>