force-app/main/default/objects/CF_AnonymizationErrorLog__c/fields/CF_AccountId__c.field-meta.xml
<CustomField>
    <fullName>CF_AccountId__c</fullName>
    <label>AccountId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>