force-app/main/default/objects/CF_AnonymizationErrorLog__c/fields/CF_AnonymizationDate__c.field-meta.xml
<CustomField>
    <fullName>CF_AnonymizationDate__c</fullName>
    <label>Anonymization Date</label>
    <type>DateTime</type>
</CustomField>