force-app/main/default/objects/CF_AnonymizationErrorLog__c/fields/CF_AnonymizationKey__c.field-meta.xml
<CustomField>
    <fullName>CF_AnonymizationKey__c</fullName>
    <label>Anonymization Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>