force-app/main/default/objects/CF_AnonymizationErrorLog__c/fields/CF_ApexClass__c.field-meta.xml
<CustomField>
    <fullName>CF_ApexClass__c</fullName>
    <label>Apex Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>