force-app/main/default/objects/CF_AnonymizationErrorLog__c/fields/CF_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CF_ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>