force-app/main/default/objects/CF_AnonymizationErrorLog__c/fields/CF_FirstName__c.field-meta.xml
<CustomField>
    <fullName>CF_FirstName__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>