force-app/main/default/objects/CF_AnonymizationErrorLog__c/fields/CF_LastName__c.field-meta.xml
<CustomField>
    <fullName>CF_LastName__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>